<resources>
    <string name="app_name">DoceGelato</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Busca</string>
    <string name="title_pedidos">Pedidos</string>
    <string name="comida_destaque_preco">%s</string>
    <string name="preco_riscado"><strike>%s</strike></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adicionar_pedido">Adicionar %s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_carrinho">Carrinho</string>
    <string name="quantity_pedido_x">x %d</string>
    <string name="admin"><b>Admin</b>\nSessão para administradores</string>
    <string name="digite_um_c_digo">Digite um código</string>
    <string name="cupom">Cupom</string>
    <string name="total_com_a_entrega">Total com a entrega</string>
    <string name="finalizar_pedido">Finalizar pedido</string>
    <string name="nada_no_carrinho">Nada no carrinho</string>
    <string name="adicione_as_suas_comidas_no_carrinho_para_vizualiza_las_aqui">Adicione as suas comidas no carrinho para vizualiza-las aqui!</string>
    <string name="economia">economia:</string>
    <string name="_50">50%</string>
    <string name="coxinhas_de_cuz_cuz">Coxinhas de Cuz Cuz</string>
    <string name="uma_imagem_da_comida_destaque">Uma imagem da comida destaque</string>
    <string name="um_banner_de_comida">Um banner de comida</string>
    <string name="destaques">Destaques</string>
    <string name="massa_de_pizza_gostosa_muito_mesmo">Massa de pizza gostosa muito mesmo</string>
    <string name="r_16_99">R$ 16,99</string>
    <string name="imagem_da_comida">Imagem da comida</string>
    <string name="alguma_observa_o">Alguma observação?</string>
    <string name="_1">1</string>
    <string name="adicionar">Adicionar</string>
    <string name="ex_tirar_a_cebola_mais_maionese_sem_catupiry_etc">Ex: tirar a cebola… mais maionese, sem catupiry, etc…</string>
    <string name="bife_de_carne_ovo_arroz_branco_farofa_pur_de_batatas_feij_o_mulatino_e_tudo_o_que_h_de_melhor">Bife de carne, Ovo, Arroz, Branco, Farofa, Puré de batatas, Feijão Mulatino, e tudo o que há de melhor</string>
    <string name="bife_a_cavalo">Bife A Cavalo</string>
    <string name="usar_localiza_o_atual"><b>Usar localização atual</b>\n%s</string>
    <string name="criar_nova_localizacao">Crie um novo endereço</string>
    <string name="o_que_voc_procura">O que você procura?</string>
    <string name="endereco_final">Bairro: %s\nRua: %s,%s\nPonto de Referência: %s</string>
    <string name="total_price">Total: %s</string>
    <string name="seu_pedido_foi_feito_e_agora_aguarda_avalia_o">Seu pedido foi feito e agora aguarda avaliação!</string>
    <string name="sair_da_conta">Sair da conta</string>
    <string name="close_button">close button</string>
    <string name="perfil_s_photo">perfil\'s photo</string>
    <string name="adicionais">%s</string>
    <string name="seu_bairro">Seu bairro</string>
    <string name="salvar">Salvar</string>
    <string name="token">772908591323–4t4sqne3bkd8h9pudf1uttgj944ga712.apps.googleusercontent.com</string>
</resources>