<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.docegelato.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_sacolaFragment"
            app:destination="@id/sacolaFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.docegelato.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_pedidos"
        android:name="com.example.docegelato.ui.pedidos.PedidosFragment"
        android:label="@string/title_pedidos"
        tools:layout="@layout/fragment_pedidos" />
    <fragment
        android:id="@+id/sacolaFragment"
        android:name="com.example.docegelato.ui.sacola.SacolaFragment"
        android:label="fragment_sacola"
        tools:layout="@layout/fragment_sacola" >
        <action
            android:id="@+id/action_sacolaFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_sacolaFragment_to_navigation_pedidos2"
            app:destination="@id/navigation_pedidos" />
    </fragment>
</navigation>