<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.perfil.PerfilFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/close_perfil_btn"
            android:src="@drawable/ic_baseline_close_24"
            android:padding="32dp"
            android:layout_marginTop="32dp"
            android:background="?attr/actionBarItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close_button" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_img"
                android:layout_marginStart="32dp"
                app:cardCornerRadius="20dp"
                android:layout_width="40dp"
                android:layout_height="40dp">

                <ImageView
                    android:id="@+id/img_perfil_photo"
                    android:layout_width="match_parent"
                    android:src="@drawable/placeholder"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/perfil_s_photo" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/perfil_name"
                android:layout_width="wrap_content"
                android:layout_marginStart="16dp"
                tools:text="Pessoa"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/localizacao"
            tools:text="@tools:sample/lorem/random"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/nunito"
            android:layout_marginEnd="32dp"
            android:drawablePadding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_outline_edit_location_24" />




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sair"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:clickable="true"
            tools:visibility="visible"
            android:padding="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_height="wrap_content"
            android:focusable="true">

            <TextView
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/nunito"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:drawablePadding="16dp"
                android:text="@string/sair_da_conta"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_baseline_close_24"
                app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:background="@color/gray_light"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/admin"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:clickable="true"
            tools:visibility="visible"
            android:visibility="gone"
            android:padding="16dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_height="wrap_content"
            android:focusable="true">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:drawablePadding="16dp"
                android:text="@string/admin"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_light_even_more"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            />
    </LinearLayout>

</ScrollView>