<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.carrinho.CarrinhoFragment">

    <ImageButton
        android:id="@+id/btn_back_to_base_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="?attr/actionBarItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="32dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_top_fixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/nunito"
        android:text="@string/title_carrinho"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back_to_base_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container_localizacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ln_bottom_finalizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/fixed_pergunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/nunito"
            android:text="Onde devemos entregar seu pedido?"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/localizacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:drawablePadding="16dp"
            android:fontFamily="@font/nunito"
            android:maxLines="2"
            app:drawableStartCompat="@drawable/ic_outline_edit_location_24"
            tools:text="@tools:sample/lorem/random" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pedido_feito"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/container_localizacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back_to_base_fragment"
        tools:listitem="@layout/pedido_item" />

    <LinearLayout
        android:id="@+id/ln_bottom_finalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ln_cupom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/ln_bottom_finalizar">

            <ImageView
                android:id="@+id/img_cupom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_outline_discount_24"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/static_cupom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/cupom"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/edit_cupom"
                app:layout_constraintEnd_toEndOf="@+id/edit_cupom"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/edit_cupom" />

            <EditText
                android:id="@+id/edit_cupom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:enabled="false"
                android:fontFamily="@font/nunito"
                android:hint="@string/digite_um_c_digo"
                app:layout_constraintBottom_toBottomOf="@+id/img_cupom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/img_cupom"
                app:layout_constraintTop_toTopOf="@+id/img_cupom" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/gray_light_even_more"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/nunito"
                android:text="@string/total_com_a_entrega"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_total_pedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/nunito"
                android:gravity="end"
                android:text="R$ 16,98"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_finalizar_tudo"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green_shopper"
            android:fontFamily="@font/nunito"
            android:text="@string/finalizar_pedido"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

    <include
        android:id="@+id/included"
        android:visibility="gone"
        layout="@layout/sem_item_img"
        />
    <FrameLayout
        android:id="@+id/progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>